adding images of breakfast

--- a/index.html
+++ b/index.html
@@ -6,6 +6,69 @@
     <title>Odin-recipes</title>
 </head>
 <body>
+
+    <!-- Header which used to choose breakfast, lunch and dinner -->
+
+    <header>
+        <nav>
+            <a href="./recipes/Breakfast/">Breakfast</a>
+            <br>
+            <a href="./recipes/Lunch/">Lunch</a>
+            <br>
+            <a href="./recipes/Dinner/">Dinner</a>
+            <br>
+        </nav>
+    </header>
+
+    <!-- A description about the page -->
+
     <h1>Odin-Recipes</h1>
+    <p>
+        Welcome to odin-recipes, a place where cooking meets creativity! 
+        Here you’ll find a collection of delicious, easy-to-follow recipes made for every taste and occasion.
+        Whether you’re a beginner in the kitchen or an experienced cook looking for inspiration, our recipes are designed to bring flavor, simplicity, and joy to your table.
+        Explore step-by-step guides, discover new cooking tips, and enjoy the art of making food that not only tastes amazing but also feels good to share.
+    </p>
+    <p>
+            Each recipe includes a clear list of ingredients and simple, organized steps so you can cook with confidence. 
+            From preparation to the final dish, everything is explained in detail to make the process smooth and enjoyable. 
+            No matter the dish, you’ll always know exactly what you need and how to make it perfectly.
+    </p>
+
+    <!--Breakfast section -->
+
+    <section>
+        <h2>Breakfast</h2>
+        <br>
+    <p>Breakfast is the perfect way to start your day with energy and flavor. In this section, you’ll find some of the most loved morning classics—crispy waffles, fluffy pancakes, and perfectly cooked eggs. Each recipe is simple to make, filling, and guaranteed to brighten your morning. Whether you prefer something sweet, savory, or a mix of both, these dishes will keep you satisfied and ready to take on the day</p>
+ <div>
+       <span><img src="./images/pancake1.jpg" alt="Pancake" width = "33%" height="613px"></span>
+    <span><img src="./images/pancake2.jpg" alt="Pancake" width= "33%" ></span>
+    <span><img src="./images/pancake 4.jpg" alt="Pancake" width= "33%" ></span>
+ </div>
+    <br>
+   <div>
+     <span><img src="./images/waffel1.jpg" alt="waffel" width ="33%"></span>
+    <span><img src="./images/waffel2.jpg" alt="waffel" width ="33%" height = "725px"></span>
+    <span><img src="./images/waffel3.jpg" alt="waffel" width ="33%" height = "725px"></span>
+   </div>
+    <br>
+   <div>
+    <span><img src="./images/egg1.jpg" alt="waffel" width ="33%"></span>
+    <span><img src="./images/egg2.jpg" alt="waffel" width ="33%"></span>
+    <span><img src="./images/egg3.jpg" alt="waffel" width ="33%"></span>
+    
+
+
+   </div>
+    </section>
+
+    <!-- Lunch ->
+
+
+
+
+
+    
 </body>
 </html>
