--- a/recipes/Breakfast/breakfast.html
+++ b/recipes/Breakfast/breakfast.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Breakfast</title>
 </head>
 <body>
-    
+    <!-- header section -->
+    <header>
+        <nav>
+            <a href="../Breakfast/eggs.html">Egg</a>
+            <br>
+            <br>
+            <a href="../Breakfast/pancake.html">Pancake</a>
+            <br>
+            <br>
+            <a href="../Breakfast/waffels.html">Waffels</a>
+            <br>
+            <br>
+        </nav>
+    </header>
 </body>
 </html>
