--- a/recipes/Breakfast/eggs.html
+++ b/recipes/Breakfast/eggs.html
@@ -16,8 +16,8 @@
             <a href="./waffels.html">Waffels</a>
             <br>
             <a href="../../index.html">Home</a>
-            <a href="../Dinner/dinner.html"></a>
-            <a href="../Lunch/lunch.html"></a>
+            <a href="../Dinner/dinner.html">Dinner</a>
+            <a href="../Lunch/lunch.html">Lunch</a>
         </nav>
     </header>
 
