--- a/recipes/Breakfast/eggs.html
+++ b/recipes/Breakfast/eggs.html
@@ -9,15 +9,18 @@
     <!-- Header section -->
     <header>
         <nav>
+            <a href="../../index.html">Home</a>
+            <br>
             <a href="./breakfast.html">Breakfast</a>
             <br>
             <a href="./pancake.html">Pancake</a>
             <br>
             <a href="./waffels.html">Waffels</a>
             <br>
-            <a href="../../index.html">Home</a>
             <a href="../Dinner/dinner.html">Dinner</a>
+            <br>
             <a href="../Lunch/lunch.html">Lunch</a>
+            <br>
         </nav>
     </header>
 
@@ -54,10 +57,11 @@
         <li>For sunny-side up, cook until the whites are done and the yolk is still runny.</li>
         <li>For over-easy, flip the egg gently and cook for 30 seconds more.</li>
         <li>Remove carefully and serve hot with bread, rice, or any dish of your choice.</li>
-      
     </ol>
-
  </section>
+ <footer>
+
+ </footer>
 
 
     
