finishing the Lunch section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <header>
         <nav>
-            <a href="./recipes/Breakfast/breakfast.html">Breakfast</a>
+            <a href="./recipes/Breakfast/breakfast.html" target ="_blank">Breakfast</a>
             <br>
-            <a href="./recipes/Lunch/lunch.html">Lunch</a>
+            <a href="./recipes/Lunch/lunch.html" target ="_blank">Lunch</a>
             <br>
-            <a href="./recipes/Dinner/dinner.html">Dinner</a>
+            <a href="./recipes/Dinner/dinner.html" target ="_blank">Dinner</a>
             <br>
         </nav>
     </header>
