--- a/recipes/Lunch/lunch.html
+++ b/recipes/Lunch/lunch.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lunch</title>
 </head>
 <body>
+     <!-- header section -->
+    <header>
+        <nav>
+            <a href="../../index.html">Home</a>
+            <br>
+            <br>
+            <a href="../Lunch/burger.html">Burger</a>
+            <br>
+            <br>
+            <a href="../Lunch/salad.html">Salad</a>
+            <br>
+            <br>
+            <a href="../Lunch/Sandwitch.html">Sandwitch</a>
+            <br>
+            <br>
+        </nav>
+    </header>
     
 </body>
 </html>
