--- a/recipes/Breakfast/breakfast.html
+++ b/recipes/Breakfast/breakfast.html
@@ -9,6 +9,9 @@
     <!-- header section -->
     <header>
         <nav>
+            <a href="../../index.html">Home</a>
+            <br>
+            <br>
             <a href="../Breakfast/eggs.html">Egg</a>
             <br>
             <br>
