--- a/recipes/Dinner/dinner.html
+++ b/recipes/Dinner/dinner.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Dinner</title>
 </head>
 <body>
-    
+    <!-- header section -->
+    <header>
+        <nav>
+            <a href="../../index.html">Home</a>
+            <br>
+            <br>
+            <a href="../Dinner/cabbage-rolls.html">Cabbage rolls</a>
+            <br>
+            <br>
+            <a href="../Dinner/soup.html">Soup</a>
+            <br>
+            <br>
+            <a href="../Dinner/steak.html">Steak</a>
+            <br>
+            <br>
+        </nav>
+    </header>
 </body>
 </html>
